--- a/index.html
+++ b/index.html
@@ -835,6 +835,12 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="h4 title text-center">Manoela Silva</div>
+      <div class="text-center text-muted">
+        <p>&copy; 2020</p>
+      </div>
+    </footer>
     <script src="third-party/now-ui-kit-1.1.0/js/core/jquery.3.2.1.min.js"></script>
     <script src="third-party/now-ui-kit-1.1.0/js/core/popper.min.js"></script>
     <script src="third-party/now-ui-kit-1.1.0/js/core/bootstrap.min.js"></script>
