typo / back to top button / linkedin button

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
               <div class="ms-personal-photo"><img src="assets/images/me.jpeg" alt="me" /></div>
               <div class="h2 title">Manoela Silva</div>
               <p class="category text-white">Software Developer, Tech Lead</p>
+              <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="bottom" title="Profile on LinkedIn"
+                href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" rel="external" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
+              </a>
             </div>
           </div>
           <div class="section pb-0">
@@ -350,13 +354,13 @@
               </div>
               <div class="timeline-footer">
                 <div class="row">
-                  <div class="ms-thesis-link col-4">
+                  <div class="ms-thesis-link col-5">
                     <a href="https://repositorio.ufscar.br/handle/ufscar/9154" rel="external" target="_blank">
                       Thesis (pt-br) <i class="fa fa-external-link text-info"></i>
                     </a>
                   </div>
 
-                  <div class="col-8 text-right">
+                  <div class="col-7 text-right">
                     <span>Sorocaba, SP, Brazil</span><i class="fa fa-map-marker text-info"></i>
                   </div>
                 </div>
@@ -788,7 +792,7 @@
                 </div>
                 <div class="row ms-skill-group">
                   <p class="ms-skill col-lg-12 col-sm-6">Communication</p>
-                  <p class="ms-skill col-lg-12 col-sm-6">Time mangement</p>
+                  <p class="ms-skill col-lg-12 col-sm-6">Time management</p>
                 </div>
                 <div class="row ms-skill-group">
                   <p class="ms-skill col-lg-12 col-sm-6">Resilience</p>
@@ -835,8 +839,21 @@
         </div>
       </div>
     </div>
+    <div class="btn-fab" id="back-to-top">
+      <button type="button" class="btn btn-info btn-icon btn-round has-tooltip" data-placement="top"
+        title="Back to Top">
+        <i class="fa fa-arrow-up"></i>
+      </button>
+    </div>
     <footer class="footer">
-      <div class="h4 title text-center">Manoela Silva</div>
+      <div class="text-center">
+        <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="top" title="Profile on LinkedIn"
+          href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" target="_blank" rel="external">
+          <i class="fa fa-linkedin-square"></i>
+        </a>
+      </div>
+
+      <div class="h4 title text-center mt-0">Manoela Silva</div>
       <div class="text-center text-muted">
         <p>&copy; 2020</p>
       </div>
