--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-info" color-on-scroll="400">
         <div class="container">
           <div class="navbar-translate">
-            <a class="navbar-brand" href="#"></a> <!-- Necesseary to keep the button on the right side -->
+            <a class="navbar-brand" href="#"></a> <!-- Necessary to keep the button on the right side -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu"
               aria-expanded="false" aria-label="Toggle menu">
               <span class="navbar-toggler-bar bar1"></span>
@@ -569,7 +569,7 @@
                     </div>
                   </div>
                   <div class="row ms-skill">
-                    <p class="col-7">Design de API</p>
+                    <p class="col-7">API Design</p>
                     <div class="col-5 ms-level">
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
@@ -855,7 +855,7 @@
 
       <div class="h4 title text-center mt-0">Manoela Silva</div>
       <div class="text-center text-muted">
-        <p>&copy; 2020</p>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
       </div>
     </footer>
     <script src="third-party/now-ui-kit-1.1.0/js/core/jquery.3.2.1.min.js"></script>
