--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
               <div class="button-container">
                 <a class="btn btn-info btn-round"
-                  href="https://drive.google.com/uc?export=download&id=1Q3tpznpD5pa-ZUs1DsFq6Z8T_Jh3kfPK"
+                  href="https://drive.google.com/uc?export=download&id=1FcoFceuyc0azjgki4AN-u5-Y3ZGCin1n"
                   data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download>Download
                   CV</a>
               </div>
@@ -205,7 +205,7 @@
 
               <div class="timeline-footer">
                 <span class="text-info">Java11, Spring Boot, Angular 6, PostgreSQL, AWS, Git, Jira, Scrum,
-                  Jenkins, <a class="scroll-behavior-smooth" href="#mySkills">+</a></span>
+                  Jenkins, <a class="scroll-behavior-smooth" href="#mySkills"><i class="fa fa-plus-circle"></i></a></span>
               </div>
             </div>
           </li>
@@ -242,7 +242,7 @@
               </div>
               <div class="timeline-footer">
                 <span class="text-info">Java8, Spring Boot, Angular 2, My SQL, AWS, Git, Jira, Scrum, Jenkins,
-                  REST, <a class="scroll-behavior-smooth" href="#mySkills">+</a></span>
+                  <a class="scroll-behavior-smooth" href="#mySkills"><i class="fa fa-plus-circle"></i></a></span>
               </div>
             </div>
           </li>
@@ -691,6 +691,16 @@
                     </div>
                   </div>
                   <div class="row ms-skill">
+                    <p class="col-7">XML</p>
+                    <div class="col-5 ms-level">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star-o"></span>
+                      <span class="fa fa-star-o"></span>
+                    </div>
+                  </div>
+                  <div class="row ms-skill">
                     <p class="col-7">HTML / CSS / SASS</p>
                     <div class="col-5 ms-level">
                       <span class="fa fa-star"></span>
@@ -747,16 +757,6 @@
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star-half-o"></span>
-                      <span class="fa fa-star-o"></span>
-                    </div>
-                  </div>
-                  <div class="row ms-skill">
-                    <p class="col-7">Azure</p>
-                    <div class="col-5 ms-level">
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star-half-o"></span>
-                      <span class="fa fa-star-o"></span>
                       <span class="fa fa-star-o"></span>
                     </div>
                   </div>
