--- a/index.html
+++ b/index.html
@@ -519,17 +519,7 @@
                     </div>
                   </div>
                   <div class="row ms-skill">
-                    <p class="col-7">Scrum</p>
-                    <div class="col-5 ms-level">
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                      <span class="fa fa-star"></span>
-                    </div>
-                  </div>
-                  <div class="row ms-skill">
-                    <p class="col-7">Kanban</p>
+                    <p class="col-7">Scrum / Kanban</p>
                     <div class="col-5 ms-level">
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
@@ -598,6 +588,26 @@
                       <span class="fa fa-star-o"></span>
                     </div>
                   </div>
+                  <div class="row ms-skill">
+                    <p class="col-7">Postman</p>
+                    <div class="col-5 ms-level">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star-o"></span>
+                    </div>
+                  </div>
+                  <div class="row ms-skill">
+                    <p class="col-7">SoapUI</p>
+                    <div class="col-5 ms-level">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star-half-o"></span>
+                      <span class="fa fa-star-o"></span>
+                      <span class="fa fa-star-o"></span>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-md-6">
                   <div class="row ms-skill">
@@ -647,6 +657,16 @@
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
+                      <span class="fa fa-star-o"></span>
+                    </div>
+                  </div>
+                  <div class="row ms-skill">
+                    <p class="col-7">JUnit</p>
+                    <div class="col-5 ms-level">
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star"></span>
+                      <span class="fa fa-star-o"></span>
                       <span class="fa fa-star-o"></span>
                     </div>
                   </div>
