--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manoela Silva</title>
-  <meta name="description" content="Manoela Silva"/>
+  <meta name="description" content="Manoela Silva" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="third-party/aos/css/aos.min.css" rel="stylesheet">
@@ -55,8 +55,9 @@
               <div class="ms-personal-photo"><img src="assets/images/me.jpeg" alt="me" /></div>
               <div class="h2 title">Manoela Silva</div>
               <p class="category text-white">Software Developer, Tech Lead</p>
-              <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="bottom" title="Profile on LinkedIn"
-                href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" rel="external" target="_blank">
+              <a class="btn btn-icon btn-round btn-linkedin has-tooltip" data-placement="bottom"
+                title="Profile on LinkedIn" href="https://www.linkedin.com/in/mcbsilva/?locale=en_US" rel="external"
+                target="_blank">
                 <i class="fa fa-linkedin-square"></i>
               </a>
             </div>
@@ -65,8 +66,8 @@
             <div class="container">
               <div class="button-container">
                 <a class="btn btn-info btn-round"
-                  href="https://drive.google.com/uc?export=download&id=1FcoFceuyc0azjgki4AN-u5-Y3ZGCin1n"
-                  data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download>Download
+                  href="https://drive.google.com/uc?export=download&id=15Jvl7DESK0ieoPxH-vCqz-NcAHK-eU9J"
+                  data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="Manoela Silva - Resume.pdf">Download
                   CV</a>
               </div>
             </div>
@@ -205,7 +206,8 @@
 
               <div class="timeline-footer">
                 <span class="text-info">Java11, Spring Boot, Angular 6, PostgreSQL, AWS, Git, Jira, Scrum,
-                  Jenkins, <a class="scroll-behavior-smooth" href="#mySkills"><i class="fa fa-plus-circle"></i></a></span>
+                  Jenkins, <a class="scroll-behavior-smooth" href="#mySkills"><i
+                      class="fa fa-plus-circle"></i></a></span>
               </div>
             </div>
           </li>
@@ -721,7 +723,7 @@
                     </div>
                   </div>
                   <div class="row ms-skill">
-                    <p class="col-7">HTML / CSS / SASS</p>
+                    <p class="col-7">HTML / CSS / SCSS</p>
                     <div class="col-5 ms-level">
                       <span class="fa fa-star"></span>
                       <span class="fa fa-star"></span>
@@ -875,7 +877,9 @@
 
       <div class="h4 title text-center mt-0">Manoela Silva</div>
       <div class="text-center text-muted">
-        <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
+        <p>&copy;
+          <script>document.write(new Date().getFullYear())</script>
+        </p>
       </div>
     </footer>
     <script src="third-party/now-ui-kit-1.1.0/js/core/jquery.3.2.1.min.js"></script>
